--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
   "require": {
     "ext-mbstring": "*",
     "nesbot/carbon": "^1.2",
-    "php": ">=5.6.4"
+    "php": "^5.4|^7.0"
   },
   "require-dev": {
     "ext-xml": "*",
     "ext-zip": "*",
     "phpoffice/phpexcel": "^1.8",
     "phpoffice/phpspreadsheet": "^1.0.0",
-    "phpunit/phpunit": "^5.0|^6.0"
+    "phpunit/phpunit": "^4.8|^5.7"
   },
   "autoload": {
     "psr-4": {
